# swiper

./: CMakeLists.txt  README.md  install.sh
cmake/: FindPCAP.cmake
example/: client.py  server.py
include/: mainwindow.h  packetcapture.h  portscanner.h
src/: main.cpp  mainwindow.cpp  packetcapture.cpp  portscanner.cpp
ui/: mainwindow.ui
